# NiceGUI-UGForm

./: CHANGELOG.md  README.md  demo.py  pyproject.toml
nicegui_ugform/: __init__.py
nicegui_ugform/core/: __init__.py  fields.py  form.py
nicegui_ugform/i18n/: __init__.py  helper.py  keys.py  locale_en.py  locale_zh_cn.py
nicegui_ugform/ui/: __init__.py  form_display.py  form_editor.py
tests/: __init__.py  test_fields.py  test_form.py  test_i18n.py  test_serialization.py
